objects/advpm__Expense__c.object
<CustomObject>
    <fields>
        <fullName>advpm__Billing_Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill</fullName>
                    <default>true</default>
                    <label>Bill</label>
                </value>
                <value>
                    <fullName>Do Not Bill</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Billing_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unprocessed</fullName>
                    <default>true</default>
                    <label>Unprocessed</label>
                </value>
                <value>
                    <fullName>Billed</fullName>
                </value>
                <value>
                    <fullName>Not Billed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Court Costs</fullName>
                </value>
                <value>
                    <fullName>Dining/Entertainment</fullName>
                </value>
                <value>
                    <fullName>Legal Services</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Expense_Amount__c</fullName>
        <label>Rate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Expense_Date__c</fullName>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Export_Date_Time__c</fullName>
        <label>Export Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>advpm__Exported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Incurred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timekeeper</label>
        <referenceTo>advpm__Timekeeper__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>advpm__My_Timekeeper_s_Expense__c</fullName>
        <formula>IF($User.Id = advpm__Incurred_By__r.advpm__Staff__c, &quot;True&quot;, &quot;False&quot;)</formula>
        <label>My Timekeeper&apos;s Expense</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Payment_Reference__c</fullName>
        <label>Payment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Total_Amount__c</fullName>
        <formula>IF( ISBLANK( advpm__Expense_Amount__c ), 0 , advpm__Expense_Amount__c ) *  IF( ISBLANK( advpm__Quantity__c  ), 1 , advpm__Quantity__c  )</formula>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>advpm__Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>E101 Copying</fullName>
                </value>
                <value>
                    <fullName>E102 Outside printing</fullName>
                </value>
                <value>
                    <fullName>E103 Word processing</fullName>
                </value>
                <value>
                    <fullName>E104 Facsimile</fullName>
                </value>
                <value>
                    <fullName>E105 Telephone</fullName>
                </value>
                <value>
                    <fullName>E106 Online research</fullName>
                </value>
                <value>
                    <fullName>E107 Delivery services/messengers</fullName>
                </value>
                <value>
                    <fullName>E108 Postage</fullName>
                </value>
                <value>
                    <fullName>E109 Local travel</fullName>
                </value>
                <value>
                    <fullName>E110 Out-of-town travel</fullName>
                </value>
                <value>
                    <fullName>E111 Meals</fullName>
                </value>
                <value>
                    <fullName>E112 Court fees</fullName>
                </value>
                <value>
                    <fullName>E113 Subpoena fees</fullName>
                </value>
                <value>
                    <fullName>E114 Witness fees</fullName>
                </value>
                <value>
                    <fullName>E115 Deposition transcripts</fullName>
                </value>
                <value>
                    <fullName>E116 Trial transcripts</fullName>
                </value>
                <value>
                    <fullName>E117 Trial exhibits</fullName>
                </value>
                <value>
                    <fullName>E118 Litigation support vendors</fullName>
                </value>
                <value>
                    <fullName>E119 Experts</fullName>
                </value>
                <value>
                    <fullName>E120 Private investigators</fullName>
                </value>
                <value>
                    <fullName>E121 Arbitrators/mediators</fullName>
                </value>
                <value>
                    <fullName>E122 Local counsel</fullName>
                </value>
                <value>
                    <fullName>E123 Other professionals</fullName>
                </value>
                <value>
                    <fullName>E124 Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>advpm__All</fullName>
        <columns>NAME</columns>
        <columns>advpm__Matter__c</columns>
        <columns>advpm__Expense_Amount__c</columns>
        <columns>advpm__Expense_Date__c</columns>
        <columns>advpm__Type__c</columns>
        <columns>advpm__Category__c</columns>
        <columns>advpm__Export_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>advpm__Exported_Expense_Entries</fullName>
        <columns>NAME</columns>
        <columns>advpm__Matter__c</columns>
        <columns>advpm__Expense_Amount__c</columns>
        <columns>advpm__Expense_Date__c</columns>
        <columns>advpm__Category__c</columns>
        <columns>advpm__Type__c</columns>
        <columns>advpm__Export_Date_Time__c</columns>
        <columns>advpm__Incurred_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>advpm__Exported__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Exported Expense Entries</label>
    </listViews>
    <listViews>
        <fullName>advpm__My_Timekeeper_s_Expense</fullName>
        <columns>NAME</columns>
        <columns>advpm__Matter__c</columns>
        <columns>advpm__Total_Amount__c</columns>
        <columns>advpm__Expense_Date__c</columns>
        <columns>advpm__Type__c</columns>
        <columns>advpm__Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>advpm__My_Timekeeper_s_Expense__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <label>My Expenses Logged As Timekeeper</label>
    </listViews>
    <listViews>
        <fullName>advpm__UnExported_Expense_Entries</fullName>
        <columns>NAME</columns>
        <columns>advpm__Matter__c</columns>
        <columns>advpm__Expense_Amount__c</columns>
        <columns>advpm__Expense_Date__c</columns>
        <columns>advpm__Category__c</columns>
        <columns>advpm__Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>advpm__Exported__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>UnExported Expense Entries</label>
    </listViews>
    <nameField>
        <label>Expense</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>